<resources>
    <string name="app_name">Wizard</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="wizard">Wizard</string>
    <string name="next">Next</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="question_display">Question would be displayed here.</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="congratulations_name">Congratulations Name</string>
    <string name="your_score_is_1_5">Your score is 1/5</string>
    <string name="finish">FINISH</string>
</resources>