<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uiux.ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:background="@drawable/results_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/ic_trophy"
            android:contentDescription="@string/todo">

        </ImageView>

        <TextView
            android:id="@+id/tvNameResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulations_name"
            android:gravity="center"
            android:layout_marginTop="30sp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score_is_1_5"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="20sp"
            android:alpha="0.7"
            android:textStyle="bold">
        </TextView>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/white"
            android:textColor="#975AFF"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp">

        </Button>

    </LinearLayout>
</layout>